src/golden/functions/typeerrors/test.golden/typeerrors.fl
	ok x = x + 3

	f x = "hello" + 3
	
	struct Foo
	
	method meth
		<- "hello"
		<- Foo
		<- [42]